In the 3D viewer, attached lights to the eye, not to the object.
git-svn-id: https://jcae.svn.sourceforge.net/svnroot/jcae/trunk@2216 9c4724a3-da1e-0410-bc68-88f18da35cd4